--- a/elk/docker-compose.yml
+++ b/elk/docker-compose.yml
@@ -5,9 +5,10 @@ services:
   elasticsearch:
     build:
       context: elasticsearch/
+    container_name: elasticsearch
     volumes:
       - ./elasticsearch/config/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml:ro
-      - ~/elk-dir/data:/usr/share/elasticsearch/data:rw
+#      - ~/elk-dir/data:/usr/share/elasticsearch/data:rw
     ports:
       - "9200:9200"
       - "9300:9300"
@@ -16,26 +17,10 @@ services:
     networks:
       - elk
 
-  logstash:
-    build:
-      context: logstash/
-    volumes:
-      - ./logstash/config/logstash.yml:/usr/share/logstash/config/logstash.yml:ro
-      - ./logstash/config/pipelines.yml:/usr/share/logstash/config/pipelines.yml:ro
-      - ./logstash/pipeline:/usr/share/logstash/pipeline:ro
-      - ./logstash/patterns:/usr/share/logstash/patterns:ro
-    ports:
-      - "5000:5000"
-    environment:
-      LS_JAVA_OPTS: "-Xmx2g -Xms1g"
-    networks:
-      - elk
-    depends_on:
-      - elasticsearch
-
   kibana:
     build:
       context: kibana/
+    container_name: kibana
     volumes:
       - ./kibana/config/:/usr/share/kibana/config:ro
     ports:
@@ -45,37 +30,56 @@ services:
     depends_on:
       - elasticsearch
 
-  zookeeper:
-      image: wurstmeister/zookeeper
-      ports:
-        - "2181:2181"
-      networks:
-        - elk
+#  logstash:
+#    build:
+#      context: logstash/
+#    volumes:
+#      - ./logstash/config/logstash.yml:/usr/share/logstash/config/logstash.yml:ro
+#      - ./logstash/config/pipelines.yml:/usr/share/logstash/config/pipelines.yml:ro
+#      - ./logstash/pipeline:/usr/share/logstash/pipeline:ro
+#      - ./logstash/patterns:/usr/share/logstash/patterns:ro
+#    ports:
+#      - "5000:5000"
+#    environment:
+#      LS_JAVA_OPTS: "-Xmx2g -Xms1g"
+#    networks:
+#      - elk
+#    depends_on:
+#      - elasticsearch
 
-  kafka:
-      build:
-        context: kafka/
-      ports:
-        - "9092:9092"
-      networks:
-        - elk
-      environment:
-        KAFKA_ADVERTISED_HOST_NAME: elk_kafka_1
-        KAFKA_ZOOKEEPER_CONNECT: elk_zookeeper_1:2181
-      volumes:
-        - /var/run/docker.sock:/var/run/docker.sock
-      depends_on:
-        - zookeeper
 
-  filebeat:
-      build:
-        context: filebeat/
-      volumes:
-        - ./filebeat/logs:/usr/log-generator/logs:ro
-      networks:
-        - elk
-      depends_on:
-        - logstash
+
+#  zookeeper:
+#      image: wurstmeister/zookeeper
+#      ports:
+#        - "2181:2181"
+#      networks:
+#        - elk
+#
+#  kafka:
+#      build:
+#        context: kafka/
+#      ports:
+#        - "9092:9092"
+#      networks:
+#        - elk
+#      environment:
+#        KAFKA_ADVERTISED_HOST_NAME: elk_kafka_1
+#        KAFKA_ZOOKEEPER_CONNECT: elk_zookeeper_1:2181
+#      volumes:
+#        - /var/run/docker.sock:/var/run/docker.sock
+#      depends_on:
+#        - zookeeper
+
+#  filebeat:
+#      build:
+#        context: filebeat/
+#      volumes:
+#        - ./filebeat/logs:/usr/log-generator/logs:ro
+#      networks:
+#        - elk
+#      depends_on:
+#        - logstash
 
 #  elastalert:
 #        build:
