--- a/spark-jupyter/docker-compose.yml
+++ b/spark-jupyter/docker-compose.yml
@@ -12,6 +12,8 @@ services:
     stdin_open: true
     tty: true
     hostname: localhost
-
+    environment:
+      GRANT_SUDO: "yes"
+    user: root
 
 
