--- a/spark-jupyter/docker-compose.yml
+++ b/spark-jupyter/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     hostname: localhost
     environment:
       GRANT_SUDO: "yes"
-#      JUPYTER_ENABLE_LAB: "yes"
+      JUPYTER_ENABLE_LAB: "yes"
     user: root
 
 
