--- a/elk/docker-compose.yml
+++ b/elk/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - "9300:9300"
     environment:
       ES_JAVA_OPTS: "-Xmx512m -Xms512m"
+      ELASTIC_PASSWORD: "elastic"
     networks:
       - elk
 
