--- a/elk/kibana/config/kibana.yml
+++ b/elk/kibana/config/kibana.yml
@@ -4,4 +4,8 @@
 #
 server.name: kibana
 server.host: "0"
-elasticsearch.url: http://elasticsearch:9200
+elasticsearch.hosts: ["http://elasticsearch:9200"]
+
+# if x-pack-security enabled in elasticsearch:
+elasticsearch.username: "elastic"
+elasticsearch.password: "elastic"
