--- a/spark-zeppelin/Dockerfile
+++ b/spark-zeppelin/Dockerfile
@@ -1,8 +1,8 @@
 FROM apache/zeppelin:0.8.1
 
-RUN wget http://apache.mirror.triple-it.nl/spark/spark-2.4.4/spark-2.4.4-bin-hadoop2.7.tgz \
-&&  tar -xzf spark-2.4.4-bin-hadoop2.7.tgz \
-&&  mv spark-2.4.4-bin-hadoop2.7 /opt/spark
+RUN wget http://ftp.man.poznan.pl/apache/spark/spark-2.4.5/spark-2.4.5-bin-hadoop2.7.tgz \
+&&  tar -xzf spark-2.4.5-bin-hadoop2.7.tgz \
+&&  mv spark-2.4.5-bin-hadoop2.7 /opt/spark
 
 ENV SPARK_HOME=/opt/spark
 
